<resources>
    <string name="app_name">Cinema</string>
    <string name="navigation_drawer_open">Open Navigation drawer</string>
    <string name="navigation_drawer_close">Open Navigation drawer</string>
    <string name="hello_blank_fragment">Phim hay</string>
    <string name="m_gh">Mã ghế:</string>
    <string name="s_l_ng">Số lượng:</string>
    <string name="t_ng_ti_n">Tổng tiền:</string>
    <string name="todo">TODO</string>
    <string name="ten_phim">Tên phim:</string>
    <string name="ti_c_tr_ng_m_u">TIỆC TRĂNG MÁU</string>
    <string name="a01">A01</string>
    <string name="_1">1</string>
    <string name="_100_000_vn">100.000 VNĐ</string>
    <string name="tiep_theo">Tiếp theo</string>
    <string name="textview">TextView</string>
    <string name="quay_lai">Quay lại</string>
    <string name="thanh_toan">Thanh Toán</string>
    <string name="h_v_ten">Họ và tên:</string>
</resources>